Matrix Schreier-Sims NEWS
===========================
Important new features are listed here. 
More detailed changed are in the ChangeLog.

2004-07-07
    Made an implementation of random element generation using the Rattle 
    algorithm by Leedham-Green, to avoid using GAP:s built-in algorithm 
    (which is Shake). This way some inverse matrix calculations are avoided.

    Also included is a not yet finished implementation of 
    Schreier-Todd-Coxeter-Sims algorithm, which uses coset enumeration to 
    possibly decrease the number of Schreier generators that are considered at 
    each level of the standard Schreier-Sims algorithm.

2004-07-03
    Implemented a simple (and yet slow) version of the random
    Schreier-Sims algorithm, as first described by Leon. The algorithm
    does not use any verification but takes as input a probability and
    tries to achieve at least this probability of correctness. However,
    since the group elements are probably not taken from a uniform
    distribution (it uses GAP:s PseudoRandom function) there is not
    theoretical guarantee of any probability.

    The stopping conditions used are simple: when a number of consecutive
    random elements sifts to identity the algorithm terminates, and the
    number is calculated from the given probability. If lower and/or upper
    bounds on the group order are known, they are used in the algorithm.

2004-06-29
    Added more Options to control when some features of the algorthim
    are used, sine it seems that, in particular, the tricks of extending
    Schreier trees and using alternating actions do not always make things
    go faster. Also incorporated some GAP-related improvements due to
    Alexander Hulpke, and a selection of an initial store of base points
    using a strategy of O'Brien and Murray.

2004-06-26
    Added an Option to flatten the Schreier trees at creation time (make
    them have height 1), so that later only a single hash lookup is needed to