@@ -6,9 +6,18 @@
 
 <h2>Project News</h2>
 
-<p>This is the contents as the <tt>NEWS</tt> file in the project package.</p>
+<p>This is the contents as the <tt>NEWS</tt> file in the project package. The dates are given in the format YYYY-MM-DD.</p>
 
 <table>
+<tr>
+<th valign="top">2004-07-08</th>
+<td>
+    The implementation of Schreier-Todd-Coxeter-Sims algorithm seems to be
+    working now. It is however still very slow, and there are possibly
+    some mistakes in the handling of relations, since it appears that the coset
+    enumeration never finishes successfully.
+</td>
+</tr>
 <tr>
 <th valign="top"> 2004-07-07</th>
 <td>
